[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "crosscode"
dynamic = ["version"]
description = "CrossCode"
authors = [
    {name = "CodeTriangle"}
]
license = "MIT"
license_files = [
    "LICENSE"
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"crosscode.WorldClass" = "crosscode.Register:WORLD_CLASS"
"crosscode.WebWorldClass" = "crosscode.Register:WEB_WORLD_CLASS"
"crosscode.Client" = "crosscode.Register:CLIENT_FUNCTION"

[tool.setuptools.dynamic]
version = {attr = "crosscode.Register:VERSION"}
