[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ctjot"
dynamic = ["version"]
description = "Chrono Trigger Jets of Time"
authors = [
    {name = "Anguirel"}
]
license = "MIT"
license_files = [
    "LICENSE"
]
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"ctjot.WorldClass" = "ctjot.Register:WORLD_CLASS"
"ctjot.WebWorldClass" = "ctjot.Register:WEB_WORLD_CLASS"
"ctjot.Client" = "ctjot.Register:CLIENT_FUNCTION"

[tool.setuptools.dynamic]
version = {attr = "ctjot.Register:VERSION"}
