[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cuphead"
dynamic = ["version"]
description = "Log options that are overridden from incompatible combinations to console."
authors = [
    {name = "JKL"}
]
license = "MIT"
classifiers = [
    "Private :: Do Not Upload"
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"cuphead.WorldClass" = "cuphead.Register:WORLD_CLASS"
"cuphead.WebWorldClass" = "cuphead.Register:WEB_WORLD_CLASS"
"cuphead.Client" = "cuphead.Register:CLIENT_FUNCTION"

[tool.setuptools.packages.find]
where = ["."]
include = ["cuphead*", "cuphead"]
exclude = ["cuphead/test*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "Constants.VERSION"}
