[project]
name = "cv64"
version = "1.0.0"
description = "Castlevania for the Nintendo 64 is the first 3D game in the Castlevania franchise. As either whip-wielding Belmont descendant Reinhardt Schneider or powerful sorceress Carrie Fernandez, brave many terrifying traps and foes as you make your way to Dracula's chamber and stop his rule of terror!"
authors = [
    {name = "LiquidCat64"}
]
requires-python = ">=3.12"

[project.entry-points."mwgg.plugins"]
"cv64.WorldClass" = "cv64.Register:WORLD_CLASS"
"cv64.WebWorldClass" = "cv64.Register:WEB_WORLD_CLASS"
"cv64.Client" = "cv64.Register:CLIENT_FUNCTION"
